crates/strider-analyze/tests/snapshots/v3__ppc64le__memory__array_sum.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "29" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "32" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "32" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "7" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x3e:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "48" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "54" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "56" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "56" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "72" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "79" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
